syntax = "proto3";

package baseserver.api.v1;

option go_package = "server/base-server/api/v1;v1";



import "validate/validate.proto";

service BillingService {
  // 创建计费用户
  rpc CreateBillingOwner(CreateBillingOwnerRequest) returns (CreateBillingOwnerReply);
  // 查询计费用户
  rpc GetBillingOwner(GetBillingOwnerRequest) returns (GetBillingOwnerReply);
  // 查询计费用户列表
  rpc ListBillingOwner(ListBillingOwnerRequest) returns (ListBillingOwnerReply);
  // 消费
  rpc Pay (PayRequest) returns (PayReply);
  // 充值
  rpc Recharge (RechargeRequest) returns (RechargeReply);
  // 查询消费列表
  rpc ListBillingPayRecord (ListBillingPayRecordRequest) returns (ListBillingPayRecordReply);
  // 查询充值列表
  rpc ListBillingRechargeRecord (ListBillingRechargeRecordRequest) returns (ListBillingRechargeRecordReply);
}

enum BillingPayRecordStatus {
  BPRS_PLACEHOLDER = 0;
  BPRS_PAYING = 1;
  BPRS_PAY_COMPLETED = 2;
}

enum BillingOwnerType {
  BOT_PLACEHOLDER = 0;
  BOT_SPACE = 1;
  BOT_USER = 2;
}

enum BillingBizType {
  BBT_PLACEHOLDER = 0;
  BBT_TRAIN_JOB = 1;
  BBT_NOTEBOOK = 2;
}

message CreateBillingOwnerRequest {
  string ownerId = 1[(validate.rules).string = {min_len: 1}];
  BillingOwnerType ownerType = 2[(validate.rules).enum = {not_in: [0]}];
}

message CreateBillingOwnerReply {

}

message GetBillingOwnerRequest {
  string ownerId = 1[(validate.rules).string = {min_len: 1}];
  BillingOwnerType ownerType = 2[(validate.rules).enum = {not_in: [0]}];
}

message BillingOwner {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string ownerId = 3;
  BillingOwnerType ownerType = 4;
  double amount = 5;
}

message GetBillingOwnerReply {
    BillingOwner billingOwner = 1;
}

message ListBillingOwnerRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  string ownerId = 5;
  BillingOwnerType ownerType = 6[(validate.rules).enum = {not_in: [0]}];
}

message ListBillingOwnerReply {
  int64 totalSize = 1;
  repeated BillingOwner billingOwners = 2;
}

message PayRequest {
  string ownerId = 1[(validate.rules).string = {min_len: 1}];
  BillingOwnerType ownerType = 2[(validate.rules).enum = {not_in: [0]}];
  double  amount = 3;  //计费开始到计费截止时间总费用 每次扣费时用amount减去当前已经扣费的amount
  BillingBizType bizType = 4;
  string bizId = 5;
  string title = 6;
  int64 startedAt = 7;  //计费开始时间 计费多次调用传相同值
  int64 endedAt = 8;  //计费截止时间  计费多次调用值递增
  BillingPayRecordStatus status = 9;  //计费状态
  map<string, string> ExtraInfo = 10;
}

message PayReply {

}

message RechargeRequest {
  string ownerId = 1[(validate.rules).string = {min_len: 1}];
  BillingOwnerType ownerType = 2[(validate.rules).enum = {not_in: [0]}];
  double  amount = 3;
  string title = 4;
}

message RechargeReply {

}

message ListBillingPayRecordRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  string ownerId = 5;
  BillingOwnerType ownerType = 6[(validate.rules).enum = {not_in: [0]}];
  string searchKey = 7; //title等模糊查找
  int64 startedAtGte = 8;
  int64 startedAtLt = 9;
  map<string, string> ExtraInfo = 10;
}

message BillingPayRecord {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string id = 3;
  string ownerId = 4;
  BillingOwnerType ownerType = 5;
  double amount = 6;
  BillingBizType bizType = 7;
  string bizId = 8;
  string title = 9;
  int64 startedAt = 10;
  int64 endedAt = 11;
  BillingPayRecordStatus status = 12;
  map<string, string> ExtraInfo = 13;
}

message ListBillingPayRecordReply {
  int64 totalSize = 1;
  repeated BillingPayRecord records = 2;
}

message ListBillingRechargeRecordRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  string ownerId = 5;
  BillingOwnerType ownerType = 6[(validate.rules).enum = {not_in: [0]}];
  int64 createdAtGte = 7;
  int64 createdAtLt = 8;
  string searchKey = 9; //title等模糊查找
}

message BillingRechargeRecord {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string id = 3;
  string ownerId = 4;
  BillingOwnerType ownerType = 5;
  double amount = 6;
  string title = 7;
}

message ListBillingRechargeRecordReply {
  int64 totalSize = 1;
  repeated BillingRechargeRecord records = 2;
}
